@@ -564,8 +564,12 @@ def sendmail(msgstr, envrecip, envsender):
         server.sendmail(envsender, envrecip, msgstr)
         server.quit()
     elif Defaults.OUTGOINGMAIL == 'sendmail':
-        cmd = "%s -f '%s' -- '%s'" % (Defaults.SENDMAIL_PROGRAM,
-                                      envsender, envrecip)
+        # You can avoid the shell by passing a tuple of arguments as
+        # the command instead of a string.  This will cause the
+        # popen2.Popen3() code to execvp() "/usr/bin/sendmail" with
+        # these arguments exactly, with no trip through any shell.
+        cmd = (Defaults.SENDMAIL_PROGRAM, '-i',
+               '-f', envsender, '--', envrecip)
         pipecmd(cmd, msgstr)
     else:
         raise Errors.ConfigError, \
