@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Tue Sep  2 01:19:38 2003 -->
+<!-- Thu Oct  9 21:27:11 2003 -->
 <!-- USING HT2HTML 2.0 -->
 <!-- SEE http://ht2html.sf.net -->
 <!-- User-specified headers:
@@ -1236,15 +1236,7 @@ Possible values include:
 "<code>sendmail</code>"
 <blockquote>
    Deliver messages via the command line interface to the sendmail
-   program (/usr/sbin/sendmail).  Use at your own risk.  "smtp" is
-   highly recommended.
-<br><br>
-   SECURITY WARNING: The 'sendmail' method is not secure.  Because
-   this method uses popen(), it goes through the shell.  It does not
-   scan the arguments for potential exploits and so it should be
-   considered unsafe.  For performance reasons, it's not recommended
-   either -- use the 'smtp' method instead, even if
-   MAIL_TRANSFER_AGENT is "sendmail".
+   program (/usr/sbin/sendmail).
 </blockquote>
 <br>
 Default is "smtp"
